ONM-1981: Fix bug changing z-index of content sidebar

--- a/public/assets/src/opennemas-webarch/less/layout/_content.less
+++ b/public/assets/src/opennemas-webarch/less/layout/_content.less
@@ -96,7 +96,6 @@
   right: 0;
   top: 135px;
   width: 250px;
-  z-index: 260;
   overflow-y: auto;
 }
 
